PA3/tests/bad/bad_inherit2.cl
class A {
	y : Int;
	m(x : Int) : Int {
		x
	};
};

class Main inherits A {
	y : Int;

	main() : SELF_TYPE {
		self
	};

	m(x : String) : Int {
		"Hello"
	};
};